[package]
name = "inftegr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.19.2", features = ["full"] }

[dependencies.windows]
version = "^0.39.0"
features = [
    "Graphics_Capture",
    "Graphics_Imaging",
    "Graphics_DirectX_Direct3D11",
    "Graphics_DirectX",
    "Media_Ocr",
    "Globalization",
    "Win32_Graphics_Direct3D12",
    "Win32_Graphics_Direct3D11on12",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Gdi",
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
    "Foundation",
    "Foundation_Collections",
    "UI_Core",
    "ApplicationModel_Core",
    "Win32_System_Com",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_System_Console",
    "Win32_System_WinRT_Direct3D11",
    "Win32_System_WinRT_Graphics_Capture",
    "System",
    "Storage_Streams"
]